[Notifications] Use custom DragHelper instead of Qt's Drag attached property

Qt's Drag attached property doesn't like it at all when it gets deleted during drag. (QTBUG-65701)
Even though we try very hard to keep the popup open, when you have multiple notification applets, their dialogs don't know each
other but access a shared data engine.

This means that, since there can only we one hovered dialog at a time, another notification applet might still dismiss the
notification and have our dialog close.

By using a singleton NotificationHelper we 1.) decouple the Drag from the item and 2.) share the "is dragging" state between applets.

BUG: 388684
FIXED-IN: 5.12.0

Differential Revision: https://phabricator.kde.org/D9754